20110421 (T.S.)
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h:
   Support up to PADRPLY_STRM_NUM_KINDS. This is the max. currently defined
   by the padProtocol (8).
   'cook' callback has a new return value with an optional 'redirected' kind
   encoded. I.e., the cook callback can choose to have the buffer posted
   as a different 'kind' from the original one.
   drvPadUdpCommListener() checks for padProto version (added paranoia).
 - src/wavBuf.c: check for legal 'kind' parameter in wavBufPost().
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h, src/padProto.h, src/padProto.c,
   src/hostStream.c: 
   Added new protocol feature: PADCMD_STRM_FLAG_C1 allows the user to request
   that only a single ADC channel is streamed. The Channel number may e.g., be
   encoded in the data 'kind'.
   This new feature in the protocol made it necessary to bump the protocol
   version number.
20110420 (T.S.)
 - src/udpComm.c, src/udpComm.h, src/udpCommBSD.c:
   Added support for packet reference count (udpCommRefPacket()).
   This requires support from underlying lanIpBasic (udpSockRefBuf()).

   Added thread-safety to udpCommBSD.c.

 - src/drvPadUdpComm.c, src/drvPadUdpComm.h, src/drvPadUdpCommIO.h:
   Added support for packet reference count (udpCommRefPacket())
   (padReplyRef(), padReplyFree()).
   This includes a new 'creatref' member in DrvPadUdpCommIORec
   (which needs to be implemented by vmeDigiComm[BPM]).
20110404 (T.S.)
 - README.drvPadUdpComm: updated (minor).
20100524 (T.S.)
 - src/padStream.c: added more statistics counters.
 - README: updated.
20100423 (T.S.)
 - updated RELEASE_NOTES; released udpComm-R1-2-0
20100416 (T.S.)
 - src/udpComm.h, src/udpCommBSD.c: REMOVED wrong UDPCOMM_ALIGNMENT
   definition. The payload of lanIpBasic UDP packetes is ***NOT***
   aligned but at a well defined offset (-4) from an alignment 
   boundary.
   In order to alert users the UDPCOMM_ALIGNMENT symbol was replaced
   by UDPCOMM_DATA_ALGN and UDPCOMM_DATA_ALGN_OFF, the offset that 